--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "react": "^18",
